<resources>
    <string name="app_name">Mi Ruta Fomeque</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="titulo">Lugares de Fómeque</string>
    <string name="tituloregistrodatos">Registro de lugares</string>
    <string name="nombresitio">Nombre del sitio</string>
    <string name="ubicacionsitio">Ubicación:</string>
    <string name="temperaturasitio">Temperatura</string>
    <string name="descripcionsitio">Descripción</string>
    <string name="puntuacionsitio">Puntuación</string>
    <string name="agregarsitiorec">Agregar sitio recomendado</string>
    <string name="subsitios">Sitios recomendados</string>
    <string name="agregarsitio">Agregar</string>
    <string name="visordetexto">Visor</string>
    <string name="sitio1">La Cumbre</string>
    <string name="ubicacion1">Vereda de chinia</string>
    <string name="temperatura1">18ºC - 22 ºC</string>
    <string name="btnir1">ir</string>
    <string name="description1">Descripcion</string>
    <string name="puntaje1">100</string>
    <string name="textovisor">TextView</string>
    <string name="medida">°C</string>
    <string name="imgreferencia">Imagen de referencia</string>
    <string name="sitiorec1">Sitios recomendados</string>
    <string name="puntos">P</string>
    <string name="puntossuspensivos">...</string>

    <!-- Sync Preferences -->
    <string name="notifications">Notificaciones</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">Lista</string>
    <string name="title_detail">Detalle</string>
    <string name="title_preferences">Configuración</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MRFOM</string>
    <string name="nav_header_subtitle">MRFOM@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="preferences">Preferencias</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="openmapnewwindow">Click para ampliar</string>
    <string name="logearse">Ingresar</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="repeatpassword">Repita la contraseña</string>
    <string name="registro">Registrar</string>
    <string name="logo">Logo</string>
    <string name="username">Nombre de usuario</string>
    <string name="registertext"><u>¿No tienes cuenta?, regístrate</u></string>
    <string name="sign_out">Cerrar Sesiòn</string>
</resources>